<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.home.HomeActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="false"
        android:fitsSystemWindows="true">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="center"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">


                <ImageView
                    android:id="@+id/procopy"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/username_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image"
                    app:layout_constraintStart_toStartOf="@+id/profile_image"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image"
                    tools:fontFamily="@font/poppins"
                    tools:text="user.name" />

                <xyz.schwaab.avvylib.AvatarView

                    android:id="@+id/profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:avvy_border_highlight_color="#15F4EE"
                    app:avvy_border_highlight_color_end="#7d12ff"
                    app:avvy_border_thickness="1dp"
                    app:avvy_border_thickness_highlight="2dp"
                    app:avvy_distance_to_border="1dp"
                    app:avvy_highlighted="false"
                    app:avvy_loading_arches_degree_area="360"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/follow_btn"
                    style="@style/small_btn"

                    android:layout_width="63dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="8dp"
                    android:text="Seek"

                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@+id/username_text"
                    app:layout_constraintStart_toStartOf="@+id/username_text"
                    app:layout_constraintTop_toBottomOf="@+id/username_text" />

                <Button
                    android:id="@+id/unfollow_btn"
                    style="@style/secondary_small_btn"
                    android:layout_width="63dp"
                    android:layout_height="19dp"
                    android:text="Unseek"
                    android:textSize="10sp"
                    android:visibility="invisible"

                    app:layout_constraintBottom_toBottomOf="@+id/follow_btn"
                    app:layout_constraintEnd_toEndOf="@+id/follow_btn"
                    app:layout_constraintStart_toStartOf="@+id/follow_btn"
                    app:layout_constraintTop_toTopOf="@+id/follow_btn" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bar_follows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top|start|end"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/profile_text"
                android:text="@string/post"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/posts_count_tx"
                app:layout_constraintStart_toStartOf="@+id/posts_count_tx"
                app:layout_constraintTop_toBottomOf="@+id/posts_count_tx" />

            <TextView
                android:id="@+id/textView3"
                style="@style/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/followers_count_text"
                app:layout_constraintStart_toStartOf="@+id/followers_count_text"
                app:layout_constraintTop_toBottomOf="@+id/followers_count_text" />

            <TextView
                android:id="@+id/followers_count_text"
                style="@style/profile_text_count"
                app:layout_constraintEnd_toStartOf="@+id/posts_count_tx"
                app:layout_constraintStart_toEndOf="@+id/following_count_text"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="200" />

            <TextView
                android:id="@+id/posts_count_tx"
                style="@style/profile_text_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="200" />

            <TextView
                android:id="@+id/following_text"
                style="@style/profile_text"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/following"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/following_count_text"
                app:layout_constraintStart_toStartOf="@+id/following_count_text"
                app:layout_constraintTop_toBottomOf="@+id/following_count_text" />

            <TextView
                android:id="@+id/following_count_text"
                style="@style/profile_text_count"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="200" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvImages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar_follows" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

